--- a/remove.html
+++ b/remove.html
@@ -33,7 +33,7 @@ src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         </div>
         <div class="row">
             <div class="col-25">
-          <input type="button" value="Search" id="stuSearch" onclick="removeStudent();" >
+          <input type="button" value="Remove" id="stuSearch" onclick="removeStudent();" >
           </div>
         </div>
     </form>
